--- a/10-tuples.tex
+++ b/10-tuples.tex
@@ -155,18 +155,15 @@ one tuple with another:
 \afterverb
 %
 
-\section{Comparing tuples}
+\section{튜플 비교하기}
 
 \index{comparison!tuple}
 \index{tuple!comparison}
 \index{sort method}
 \index{method!sort}
 
-The comparison operators work with tuples and other sequences;
-Python starts by comparing the first element from each
-sequence.  If they are equal, it goes on to the next element,
-and so on, until it finds elements that differ.  Subsequent
-elements are not considered (even if they are really big).
+비교연산자는 튜플과 다른 열(sequence)에도 동작한다. 파이썬은 각 열로부터 첫 요소를 비교하는 것에서부터 비교를 시작한다.
+만약 두 요소가 같다면, 다음 요소로 비교를 진행하여 다른 요소를 찾을 때까지 계속한다. 후속 요소는 얼마나 큰 값인지에 관계없이 비교 고려대상은 아니다.
 
 \beforeverb
 \begin{verbatim}
@@ -177,20 +174,18 @@ True
 \end{verbatim}
 \afterverb
 %
-The {\tt sort} function works the same way.  It sorts 
-primarily by first element, but in the case of a tie, it sorts
-by second element, and so on.  
 
-This feature lends itself to a pattern called {\bf DSU} for 
+{\tt sort} 함수도 동일한 방식으로 작동한다.
+첫 요소를 먼저 정렬하지만, 동일한 경우 두 번째 요소를 정렬하고, 그 후속 요소를 동일한 방식으로 정렬한다.
+이 기능은 다음 {\bf DSU}라고 불리는 패턴에 적용된다.
 
 \begin{description}
 
-\item[Decorate] a sequence by building a list of tuples
-with one or more sort keys preceding the elements from the sequence,
+\item[데코레이트(Decorate)] 열로부터 요소를 선행하는 하나 혹은 그 이상의 키를 가진 튜플 리스트를 구축하는 열
 
-\item[Sort] the list of tuples using the Python built-in {\tt sort}, and
+\item[정렬(Sort)] 파이썬 내장 함수 {\tt sort}를 사용한 튜플 리스트
 
-\item[Undecorate] by extracting the sorted elements of the sequence.
+\item[언데코레이트(Undecorate)]  열의 정렬된 요소를 추출.
 
 \end{description}
 
@@ -200,9 +195,7 @@ with one or more sort keys preceding the elements from the sequence,
 \index{decorate-sort-undecorate pattern}
 \index{pattern!decorate-sort-undecorate}
 \index{Romeo and Juliet}
-
-For example, suppose you have a list of words and you want to
-sort them from longest to shortest:
+예를 들어, 단어 리스트가 있고 가장 긴 단어부터 가장 짧은 단어 순으로 정렬한다고 가정하자.
 
 \beforeverb
 \begin{verbatim}
@@ -222,23 +215,22 @@ print res
 \end{verbatim}
 \afterverb
 %
-The first loop builds a list of tuples, where each
-tuple is a word preceded by its length.
 
-{\tt sort} compares the first element, length, first, and
-only considers the second element to break ties.  The keyword argument
-{\tt reverse=True} tells {\tt sort} to go in decreasing order.
+첫 루프는 튜플 리스트를 생성하고, 각 튜플은 선행하여 길이를 가진 단어다.
+
+{\tt sort}가 첫 요소, 길이를 우선 비교하고, 동률일 경우 두 번째 요소를 고려한다.
+{\tt sort} 함수의 인수 {\tt reverse=True}는 내림차순으로 정렬한다.
 
 \index{keyword argument}
 \index{argument!keyword}
 \index{traversal}
 
-The second loop traverses the list of tuples and builds a list of
-words in descending order of length.  So among the five character words,
-they are sorted in {\em reverse} alphabetical order.  So ``what'' appears
-before ``soft'' in the following list.
+두 번째 루프는 튜플 리스트를 훑고, 내림차순 길이 순으로 리스트를 생성한다.
+그래서, 5 문자 단어는 역 알파벳 순으로 정렬되어 있다. 다음 리스트에서 ``what''이 
+``soft'' 보다 앞에 나타난다.
 
-The output of the program is as follows:
+프로그램의 출력은 다음과 같다.
+
 %
 \beforeverb
 \begin{verbatim}
@@ -247,11 +239,10 @@ The output of the program is as follows:
 \end{verbatim}
 \afterverb
 %
-Of course the line loses much of its poetic impact 
-when turned into a Python list and sorted in 
-descending word length order.
 
-\section{Tuple assignment}
+물론, 파이썬 리스트로 변환하여 내림차순 길이 순으로 정렬된 문장은 시적인 의미를 많이 잃어버렸다.
+
+\section{ 튜플 할당}
 \label{tuple assignment}
 
 \index{tuple!assignment}
@@ -259,15 +250,10 @@ descending word length order.
 \index{swap pattern}
 \index{pattern!swap}
 
-One of the unique syntactic features of the Python language
-is the ability to have a tuple on the left hand
-side of an assignment statement.  This allows you to assign
-more than one variable at a time when the left hand side is a 
-sequence.
+파이썬 언어의 독특한 구문론적인 기능중의 하나는 할당문의 왼편에 튜플을 놓을 수 있는 것이다. 
+왼쪽 편이 열인 경우 한번에 하나 이상의 변수를 할당할 수 있게 해준다.
 
-In this example we have a two element list (which is a sequence) and
-assign the first and second elements of the sequence
-to the variables {\tt x} and {\tt y} in a single statement.
+다음 예제에서, 열인 두개 요소 리스트가 있고 하나의 명령문으로 변수 {\tt x}와 {\tt y}에 열의 첫번째와 두번째 요소를 할당한다. 
 
 \beforeverb
 \begin{verbatim}
@@ -281,11 +267,9 @@ to the variables {\tt x} and {\tt y} in a single statement.
 \end{verbatim}
 \afterverb
 %
-It is not magic, Python \emph{roughly} translates the 
-tuple assignment syntax
-to be the following:\footnote{Python does not translate the 
-syntax literally.  For example if you try this with a dictionary
-it will not work as might expect.}
+
+마술이 아니다. 파이썬은 \emph{대략} 튜플 할당 구문을 다음과 같이 해석한다.\footnote{파이썬은 구문을 문자그대로 해석하지는 않는다.
+예를 들어, 동일한 것을 딕셔너리로 작성한다면, 예상한 것처럼 작동하지는 않는다.}
 
 \beforeverb
 \begin{verbatim}
@@ -300,9 +284,7 @@ it will not work as might expect.}
 \end{verbatim}
 \afterverb
 
-Stylistically when we use a tuple on the left hand side of the assignment
-statement, we omit the parentheses, but the following is an equally 
-valid syntax:
+문체적 할당문의 왼편에 튜플을 사용할 때, 괄호를 생략한다. 하지만 다음은 동일하게 적합한 구문이다.
 
 \beforeverb
 \begin{verbatim}
@@ -316,8 +298,7 @@ valid syntax:
 \end{verbatim}
 \afterverb
 %
-A particularly clever application of tuple assignment allows
-us to {\bf swap} the values of two variables in a single statement:
+튜플 할당문을 사용하는 특히 똑똑한 응용사례는 하나의 명령문으로 두 변수의 값을 {\bf 교체(swap)}하는 것이다.
 
 \beforeverb
 \begin{verbatim}
@@ -325,15 +306,10 @@ us to {\bf swap} the values of two variables in a single statement:
 \end{verbatim}
 \afterverb
 %
-Both sides of this statement are tuples, but
-the left side is a tuple of variables; the right side is a tuple of
-expressions.  Each value on the right side 
-is assigned to its respective variable on the left side.  
-All the expressions on the right side are evaluated before any
-of the assignments.
 
-The number of variables on the left and the number of
-values on the right have to be the same:
+양쪽 모두 튜플이지만, 왼편은 튜플의 변수이고 오른편은 튜플의 표현식이다.
+오른편의 값이 왼편의 해당하는 변수에 할당된다. 오른편의 모든 표현식은 할당이 이루어지기 이전에 평가된다.
+왼편의 변수의 숫자와 오른편의 값의 숫자는 동일해야 한다.
 
 \index{exception!ValueError}
 \index{ValueError}
@@ -345,9 +321,9 @@ ValueError: too many values to unpack
 \end{verbatim}
 \afterverb
 %
-More generally, the right side can be any kind of sequence
-(string, list or tuple).  For example, to split an email address
-into a user name and a domain, you could write:
+
+좀더 일반적으로 오른 편은 임의의 열(문자열, 리스트 혹은 튜플)이 될 수 있다.
+예를 들어, 전자우편 주소를 사용자 이름과 도메인으로 쪼개기 위해서 다음과 같이 프로그램을 작성할 수 있다.
 
 \index{split method}
 \index{method!split}
@@ -360,9 +336,9 @@ into a user name and a domain, you could write:
 \end{verbatim}
 \afterverb
 %
-The return value from {\tt split} is a list with two elements;
-the first element is assigned to {\tt uname}, the second to
-{\tt domain}.
+
+{\tt split} 함수로부터 반환값은 두개의 요소를 가진 리스트다. 
+첫번째 요소는 {\tt uname}에 두번째 요소는 {\tt domain}에 할당된다.
 
 \beforeverb
 \begin{verbatim}
@@ -374,16 +350,14 @@ python.org
 \afterverb
 %
 
-\section{Dictionaries and tuples}
+\section{딕셔너리와 튜플}
 
 \index{dictionary}
 \index{items method}
 \index{method!items}
 \index{key-value pair}
 
-Dictionaries have a method called {\tt items} that returns a list of
-tuples, where each tuple is a key-value 
-pair\footnote{This behavior is slightly different in Python 3.0.}.
+딕셔너리는 튜플의 리스트를 반환하는 {\tt items} 메쏘드가 있다. 각 튜플은 키-밸류 페어다.\footnote{파이썬 3.0으로 가면서 살짝 달라졌다.}
 
 \beforeverb
 \begin{verbatim}
@@ -394,13 +368,11 @@ pair\footnote{This behavior is slightly different in Python 3.0.}.
 \end{verbatim}
 \afterverb
 %
-As you should expect from a dictionary, the items are in no
-particular order.
 
-However, since the list of tuples is a list, and tuples are comparable,
-we can now sort the list of tuples.  Converting a dictionary
-to a list of tuples is a way for us to output the contents of a 
-dictionary sorted by key:
+딕셔너리로부터 기대했듯이, 항목은 특별한 순서가 없다.
+
+하지만 튜플 리스트는 리스트여서 비교가 가능하기 때문에, 튜플 리스트를 정렬할 수 있다.
+딕셔너리를 튜플 리스트로 변환하는 방법은 키로 정렬된 딕셔너리 내용을 출력하는 것이다.
 
 \beforeverb
 \begin{verbatim}
@@ -414,16 +386,15 @@ dictionary sorted by key:
 \end{verbatim}
 \afterverb
 %
-The new list is sorted in ascending alphabetical order by the key value.
 
-\section{Multiple assignment with dictionaries}
+새로운 리스트는 키 값으로 오름차순 알파벳 순으로 정렬된다.
+
+\section{딕셔너리로 다중 할당}
 
 \index{traverse!dictionary}
 \index{dictionary!traversal}
 
-Combining {\tt items}, tuple assignment and {\tt for}, you
-can see a nice code pattern for traversing the keys and values of a dictionary
-in a single loop:
+{\tt items} 함수, 튜플 할당문, {\tt for}문을 조합해서, 하나의 루프로 딕셔너리의 키와 값을 훑는 멋진 코드 패턴을 만들 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -432,15 +403,14 @@ for key, val in d.items():
 \end{verbatim}
 \afterverb
 %
-This loop has two {\bf iteration variables} because {\tt items} returns
-a list of tuples and {\tt key, val} is a tuple assignment
-that successively iterates through each of the key/value pairs in the dictionary.  
 
-For each iteration
-through the loop, both {\tt key} and {\tt value} are advanced to the
-next key/value pair in the dictionary (still in hash order).
+이 루프는 두개의 {\bf 반복 변수(iteration variables)}를 가진다.
+{\tt items} 함수는 튜플 리스트를 반환하고, {\tt key, val}는 딕셔너리의 키-밸류 페어 각각을 성공적으로 반복하는 
+튜플 할당을 수행한다.
 
-The output of this loop is:
+매번 루프를 반복할 때마다, {\tt key}와 {\tt value}는 여전히 해쉬 순으로 되어 있는 딕셔너러의 다음 키-밸류 페어로 진행한다.
+
+루프의 출력은 다음과 같다.
 
 \beforeverb
 \begin{verbatim}
@@ -450,17 +420,13 @@ The output of this loop is:
 \end{verbatim}
 \afterverb
 %
-Again in hash key order (i.e. no particular order).
+다시한번 해쉬 키 순서다. 즉, 특별한 순서가 없다.
 
-If we combine these two techniques, we can print out the contents
-of a dictionary sorted by the \emph{value} stored in each key/value
-pair.
+두 기술을 조합하면, 딕셔너리 내용을 키-밸류 페어에 저장된 값의 순서로 정렬하여 출력할 수 있다.
 
-To do this, we first make a list of tuples where each tuple is 
-{\tt (value, key)}.  The {\tt items} method would give us a list of 
-{\tt (key, value)} tuples--but this time we want to sort by value not key.
-Once we have constructed the list with the value/key tuples, it is a simple
-matter to sort the list in reverse order and print out the new, sorted list.
+이것을 수행하기 위해서, 각 튜플이 {\tt (value, key)}인 튜플 리스트를 작성한다. 
+{\tt items} 메쏘드를 사용하여 리스트 {\tt (key, value)} 튜플을 만든다. 하지만 이번에는 키가 아닌 값으로 정렬한다.
+키-밸류 튜플 리스트를 생성하면, 역순으로 리스트를 정렬하고 새로운 정렬 리스트를 출력하는 것은 쉽다.
 
 \beforeverb
 \begin{verbatim}
@@ -478,16 +444,15 @@ matter to sort the list in reverse order and print out the new, sorted list.
 \end{verbatim}
 \afterverb
 %
-By carefully constructing the list of tuples to have the value as the first
-element of each tuple, we can sort the list of tuples and get our dictionary
-contents sorted by value.
 
-\section{The most common words}
+조심스럽게 각 튜플의 첫 요소로 값을 가지는 튜플 리스트를 생성함으로서 튜플 리스트를 정렬하여 값으로 정렬된 딕셔너리를 얻었다.
+
+\section{가장 빈도수가 높은 단어}
 
 \index{Romeo and Juliet}
-Coming back to our running example of the text from \emph{Romeo and Juliet} 
-Act 2, Scene 2, we can augment our program to use this technique to 
-print the ten most common words in the text as follows:
+
+\emph{로미오와 쥴리엣 2장 2막} 텍스트 파일로 다시 돌아와서, 텍스트에 가장 빈도수가 높은 단어를 10개를 출력하기 위해서
+이 기법을 사용하여 프로그램을 보강해보자.
 
 \beforeverb
 \begin{verbatim}
@@ -516,23 +481,16 @@ for key, val in lst[:10] :
 \end{verbatim}
 \afterverb
 %
-The first part of the program which reads the file and computes 
-the dictionary that maps each word to the count of words in the 
-document is unchanged.  But instead of simply printing out 
-{\tt counts} and ending the program, we construct a list 
-of {\tt (val, key)} tuples and then sort the list in reverse order.
 
-Since the value is first, it will be used for the comparisons and 
-if there is more than one tuple with the same value, it will look
-at the second element (the key) so tuples where the value is the
-same will be further sorted by the alphabetical order of the key.
+파일을 일고 각 단어를 문서의 단어 빈도수에 매핑(사상)하는 딕셔너리를 계산하는 프로그램 첫 부분은 바뀌지 않는다.
+하지만, {\tt counts} 를 단순히 출력하는 대신에 {\tt (val, key)} 튜플 리스트를 생성하고 역순으로 리스트를 정렬한다.
 
-At the end we write a nice {\tt for loop} which does a multiple
-assignment iteration and prints out the ten most common words
-by iterating through a slice of the list ({\tt lst[:10]}).
+값이 처음이기 때문에, 비교를 위해서 값이 사용되고, 만약 동일한 값을 가진 튜플이 하나이상 존재한다면, 두번째 요소 (키)를 살펴보게 되어서
+값이 동일한 경우 키의 알파벳 순으로 추가적으로 정렬이 된다.
 
-So now the output finally looks like what we want for our word 
-frequency analysis.
+마지막에 다중 할당 반복을 수행하는 멋진 {\tt for} 루프를 작성하고 리스트 쪼개기({\tt lst[:10]})를 통해 가장 빈도수가 높은 상위 10개 단어를 출력한다.
+
+이제 마지막 출력문은 단어 빈도 분석에서 원하는 것을 완수한 것처럼 보인다.
 
 \beforeverb
 \begin{verbatim}
@@ -549,26 +507,20 @@ frequency analysis.
 \end{verbatim}
 \afterverb
 %
-The fact that this complex data parsing and analysis 
-can be done with an easy-to-understand 19 line Python
-program is one reason why Python is a good choice as a language 
-for exploring information.
 
-\section{Using tuples as keys in dictionaries}
+복잡한 데이터 파싱과 분석 작업이 이해하기 쉬운 19줄의 파이썬 프로그램으로 수행된 사실이 왜 파이썬이 정보 탐색의 언어로서 
+좋은 선택인지 보여준다.
+
+\section{ 딕셔너리 키로 튜플 사용하기}
 
 \index{tuple!as key in dictionary}
 \index{hashable}
 
-Because tuples are {\bf hashable} and lists are not, if we want to 
-create a {\bf composite} key to use in a dictionary we must use a tuple as
-the key.
+튜플은 {\bf 해쉬가능(hashable)}하고, 리스트는 그렇지 못하기 때문에, 딕셔너리에 사용할 {\bf 복합(composite)}키를 생성하려면, 
+키로 튜플을 사용해야 한다.
 
-We would encounter a composite key if we wanted to create a 
-telephone directory that maps
-from last-name, first-name pairs to telephone numbers.  Assuming
-that we have defined the variables 
-{\tt last}, {\tt first} and {\tt number}, we could write
-a dictionary assignment statement as follows:
+만약 성(last-name)과 이름(first-name) 짝을 가지고 전화번호에 매핑(사상)하는 전화번호부를 생성하려고 하면, 복합키를 마주친다.
+변수 {\tt last}, {\tt first}, {\tt number}을 정의했다고 가정하면, 다음과 같이 딕셔너리 할당문을 작성할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -576,8 +528,8 @@ directory[last,first] = number
 \end{verbatim}
 \afterverb
 %
-The expression in brackets is a tuple.  We could use tuple
-assignment in a {\tt for} loop to traverse this dictionary.
+
+꺾쇠 괄호의 표현은 튜플이다. 딕셔너리를 훑기 위해서 {\tt for} 루프에 튜플 할당을 사용한다.
 
 \index{tuple!in brackets}
 
@@ -588,21 +540,16 @@ for last, first in directory:
 \end{verbatim}
 \afterverb
 %
-This loop traverses the keys in {\tt directory}, which are tuples.  It
-assigns the elements of each tuple to {\tt last} and {\tt first}, then
-prints the name and corresponding telephone number.
 
-\section{Sequences: strings, lists, and tuples--Oh My!}
+튜플인 {\tt directory}에 키를 루프가 훑는다. 각 튜플 요소를 {\tt last}, {\tt first}에 할당하고, 이름과 해당 전화번호를 출력한다.
+
+\section{열 : 문자열, 리스트, 튜플}
 \index{sequence}
 
-I have focused on lists of tuples, but almost all of the examples in
-this chapter also work with lists of lists, tuples of tuples, and
-tuples of lists.  To avoid enumerating the possible combinations, it
-is sometimes easier to talk about sequences of sequences.
+여기서 튜플 리스트에 초점을 맞추었지만, 거의 모든 예제가 또한 리스트의 리스트, 튜플의 튜플, 튜플의 리스트에도 동작한다.
+가능한 조합을 열거하는 것을 피하기 위해서 시퀀스의 시퀀스 (sequences of sequences)에 대해서 논의하는 것이 때로는 편리하다.
 
-In many contexts, the different kinds of sequences (strings, lists and
-tuples) can be used interchangeably.  So how and why do you choose one
-over the others?
+대부분의 맥락에서 다른 종류의 시퀀스(문자열, 리스트, 튜플)는 상호 호환해서 사용될 수 있다. 그래서 왜 어떻게 다른 것보다 이것을 선택해야 될까요?
 
 \index{string}
 \index{list}
@@ -610,36 +557,25 @@ over the others?
 \index{mutability}
 \index{immutability}
 
-To start with the obvious, strings are more limited than other
-sequences because the elements have to be characters.  They are
-also immutable.  If you need the ability to change the characters
-in a string (as opposed to creating a new string), you might
-want to use a list of characters instead.
+명확하게 시작하기 위해서, 문자열은 요소가 문자여야 하기 때문에 다른 시퀀스보다 더 제약된다.
+문자열은 또한 불변(immutable)이다. 새로운 문자열을 생성하는 것과 반대로, 문자열의 문자를 변경하고자 한다면, 대신에 문자 리스트를 사용할 필요가 있다.
 
-Lists are more common than tuples, mostly because they are mutable.
-But there are a few cases where you might prefer tuples:
+리스트는 좀더 튜플보다 일반적인다. 부분적으로는 변경가능(mutable)하기 때문이다.
+하지만, 튜플을 좀더 선호해야 하는 몇가지 경우가 있다.
 
 \begin{enumerate}
 
-\item In some contexts, like a {\tt return} statement, it is
-syntactically simpler to create a tuple than a list.  In other
-contexts, you might prefer a list.
+\item 어떤 맥락에서 {\tt return}문처럼, 리스트보다 튜플을 생성하는 것이 구문론적으로 간략하다.
+다른 맥락에서는 리스트가 더 선호될 수 있다.
 
-\item If you want to use a sequence as a dictionary key, you
-have to use an immutable type like a tuple or string.
+\item 딕셔너리 키로서 시퀀스를 사용하려면, 튜플이나 문자열같은 불변형(immutable type)을 사용해야 한다.
 
-\item If you are passing a sequence as an argument to a function,
-using tuples reduces the potential for unexpected behavior
-due to aliasing.
+\item 함수에 인자로 시퀀스를 전달하려면, 튜플을 사용하는 것이 에일리어싱(aliasing)으로 생기는 예기치 못한 행동에 대한 가능성을 줄인다.
 
 \end{enumerate}
 
-Because tuples are immutable, they don't provide methods
-like {\tt sort} and {\tt reverse}, which modify existing lists.
-However Python provides the built-in functions {\tt sorted}
-and {\tt reversed}, which take any sequence as a parameter
-and return a new list with the same elements in a different
-order.
+튜플은 불변(immutable)이어서, 현재 리스트를 변경하는 {\tt sort}, {\tt reverse} 같은 메쏘드를 제공하지는 않는다.
+하지만, 파이썬은 내장함수 {\tt sorted}, {\tt reversed} 를 제공해서, 매개 변수로 임의의 시퀀스를 받아 같은 요소를 다른 순서로 된 새로운 리스트를 반환한다.
 
 \index{sorted function}
 \index{function!sorted}
@@ -647,101 +583,75 @@ order.
 \index{function!reversed}
 
 
-\section{Debugging}
+\section{디버깅}
 
 \index{debugging}
 \index{data structure}
 \index{shape error}
 \index{error!shape}
 
-Lists, dictionaries and tuples are known generically as {\bf data
-  structures}; in this chapter we are starting to see compound data
-structures, like lists of tuples, and dictionaries that contain tuples
-as keys and lists as values.  Compound data structures are useful, but
-they are prone to what I call {\bf shape errors}; that is, errors
-caused when a data structure has the wrong type, size or composition
-or perhaps you write some code and forget the shape of your data
-and introduce an error.
+리스트, 딕셔너리, 튜플은 {\bf 자료 구조(data structures)}로 일반적으로 알려져 있다.
+이번장에서 리스트 튜플, 키로 튜플, 값으로 리스트를 담고 있는 딕셔너리 같은 복합 자료 구조를 보기 시작했다.
+복합 자료 구조는 유용하지만,  {\bf 모양 오류(shape errors)}라고 불리는 오류에 노출되어 있다.
+즉, 자료 구조가 잘못된 형(type), 크기, 구성일 경우 오류가 발생한다. 
+혹은 코드를 작성하고, 자료의 모양을 잊게 되면 오류가 발생한다.
 
-For example, if you are expecting a list with one integer and I
-give you a plain old integer (not in a list), it won't work.
+예를 들어, 정수 하나인 리스트를 기대하고, 리스트가 아닌 일반 정수를 준다면, 작동하지 않을 것이다.
 
-When you are debugging a program, and especially if you are
-working on a hard bug, there are four things to try:
+프로그램을 디버깅할 때, 정말 어려운 버그에 작업을 한다면, 다음 네가지를 시도할 수 있다.
 
 \begin{description}
 
-\item[reading:] Examine your code, read it back to yourself, and
-check that it says what you meant to say.
+\item[코드 읽기(reading):] 
+코드를 면밀히 조사하고, 반복적으로 읽고, 의도한 해도 프로그램이 작성되었는지를 확인하라.
 
-\item[running:] Experiment by making changes and running different
-versions.  Often if you display the right thing at the right place
-in the program, the problem becomes obvious, but sometimes you have to
-spend some time to build scaffolding.
+\item[실행(running):] 변경하고, 다른 버젼을 실행해서 실험하라. 종종, 프로그램의 적절한 장소에 적절한 것을 배치해서,
+문제가 명확하지만, 때때로, 발판(scaffolding)을 만들기 위해서 많은 시간을 쓰기도 한다.
 
-\item[ruminating:] Take some time to think!  What kind of error
-is it: syntax, runtime, semantic?  What information can you get from
-the error messages, or from the output of the program?  What kind of
-error could cause the problem you're seeing?  What did you change
-last, before the problem appeared?
+\item[반추(ruminating):] 
+생각의 시간을 가지세요. 어떤 종류의 오류인가? 구문, 실행, 시맨틱(의미론). 
+오류 메시지로부터 혹은 프로그램 출력으로부터 무슨 정보를 얻을 수 있는가?
+어떤 종류의 오류가 지금 보고 있는 문제를 만들었을까? 문제가 나타나기 전에 마지막으로 바꾼 것은 무엇인가?
 
-\item[retreating:] At some point, the best thing to do is back
-off, undoing recent changes, until you get back to a program that
-works and that you understand.  Then you can start rebuilding.
-
+\item[퇴각(retreating):]
+어느 시점에선가, 최선은 물러서서, 최근의 변경을 다시 원복하는 것이다. 
+동작하고 이해하는 프로그램으로 다시 돌아가서, 다시 프로그램을 작성하는 것이다.
 \end{description}
 
-Beginning programmers sometimes get stuck on one of these activities
-and forget the others.  Each activity comes with its own failure
-mode.
+초보 프로그래머는 종종 이들 활동중 하나에 사로잡혀 다른 것을 잊곤 한다. 각 활동은 그 자신만의 실패 양태가 있다.
 
 \index{typographical error}
 
-For example, reading your code might help if the problem is a
-typographical error, but not if the problem is a conceptual
-misunderstanding.  If you don't understand what your program does, you
-can read it 100 times and never see the error, because the error is in
-your head.
+예를 들어, 프로그램을 정독하는 것은 문제가 인쇄상의 오류에 있다면 도움이 되지만, 문제가 개념상 오해에 뿌리를 두고 있다면
+그렇지는 못할 것이다. 만약 여러분이 작성한 프로그램을 이해하지 못한다면, 100번 읽을 수는 있지만, 오류를 발견할 수는 없다.
+왜냐하면, 오류는 여러분의 손에 있기 때문입니다.
 
 \index{experimental debugging}
 
-Running experiments can help, especially if you run small, simple
-tests.  But if you run experiments without thinking or reading your
-code, you might fall into a pattern I call ``random walk programming,''
-which is the process of making random changes until the program
-does the right thing.  Needless to say, random walk programming
-can take a long time.
+실험을 수행하는 것은 특히 작고 간단한 테스트를 진행한다면 도움이 될 수 있다.
+하지만, 코드를 읽거나, 생각없이 실험을 수행한다면, 프로그램이 작동될 때까지 랜덤 변경을 개발하는 ''랜덤 워크 프로그램(random walk programming)''
+패턴에 빠질 수 있다. 말할 필요없이 랜덤 워크 프로그래밍은 시간이 오래 걸린다.
 
 \index{random walk programming}
 \index{development plan!random walk programming}
 
-You have to take time to think.  Debugging is like an
-experimental science.  You should have at least one hypothesis about
-what the problem is.  If there are two or more possibilities, try to
-think of a test that would eliminate one of them.
+생각의 시간을 가져야 한다. 디버깅은 실험 과학 같은 것이다. 문제가 무엇인지에 대한 최소한 한가지 가설을 가져야 한다.
+만약 두개 혹은 그 이상의 가능성이 있다면, 이러한 가능성 중에서 하나라도 줄일 수 있는 테스트를 생각해야 한다.
 
-Taking a break helps with the thinking.  So does talking.
-If you explain the problem to someone else (or even yourself), you
-will sometimes find the answer before you finish asking the question.
+휴식 시간을 가지는 것은 생각하는데 도움이 된다. 대화를 하는 것도 도움이 된다.
+문제를 다른 사람 혹은 자신에게도 설명할 수 있다면, 질문을 마치기도 전에 답을 종종 발견할 수 있다.
 
-But even the best debugging techniques will fail if there are too many
-errors, or if the code you are trying to fix is too big and
-complicated.  Sometimes the best option is to retreat, simplifying the
-program until you get to something that works and that you
-understand.
+하지만, 오류가 너무 많고 수정하려는 코드가 너무 많고, 복잡하다면 최고의 디버깅 기술도 무용지물이다.
+가끔, 최선의 선택은 퇴각하는 것이다. 작동하고 이해하는 곳까지 후퇴해서 프로그램을 간략화하라.
 
-Beginning programmers are often reluctant to retreat because
-they can't stand to delete a line of code (even if it's wrong).
-If it makes you feel better, copy your program into another file
-before you start stripping it down.  Then you can paste the pieces
-back in a little bit at a time.
+초보 프로그래머는 종종 퇴각하기를 꺼려한다. 왜냐하면, 설사 틀렸지만, 몇 라인의 코드를 지울 수 없기 때문이다.
+삭제하지 않는 것이 기분이 좋다면, 프로그램을 다시 작성하기 전에 프로그램을 다른 파일에 복사하라.
+그리고 나서, 한번에 조금씩 붙여넣어라. 
 
-Finding a hard bug requires reading, running, ruminating, and
-sometimes retreating.  If you get stuck on one of these activities,
-try the others.
+정말 어려운 버그(hard bug)를 발견하고 고치는 것은 코드 일기, 실행, 반추, 때때로 퇴각을 요구한다.
+만약 이들 활동 중 하나에 빠져있다면, 다른 것들을 시도해 보세요.
 
-
-\section{Glossary}
+\section{용어정의}
 
 \begin{description}
 
