--- a/11-regex.tex
+++ b/11-regex.tex
@@ -1,22 +1,32 @@
 % The contents of this file is 
 % Copyright (c) 2009-  Charles R. Severance, All Righs Reserved
 
-\chapter{Regular expressions}
+\chapter{정규 표현식}
 
-So far we have been reading through files, looking for patterns and extracting various bits of lines that we find interesting.  We have been using string methods like {\tt split} and {\tt find} and using lists and string slicing to extract portions of the lines.
+지금까지 파일을 훑어서 패턴을 찾고, 관심있는 라인에서 다양한 비트(bits)를 뽑아냈다. 
+{\tt split}, {\tt find} 같은 문자열 메쏘드를 사용하였고, 라인에서 일정 부분을 뽑아내기 위해서 리스트와 문자열 슬라이싱(slicing)을 사용했다.
+
 \index{regular expressions}
 \index{regex}
 \index{re module}
 
-This task of searching and extracting is so common that Python has a very powerful library called {\bf regular expressions} that handles many of these tasks quite elegantly.  The reason we have not introduced regular expressions earlier in the book is because while they are very powerful, they are a little complicated and their syntax takes some getting used to. 
+검색하고 추출하는 작업은 너무 자주 있는 일이어서 파이썬은 상기와 같은 작업을 매우 우아하게 처리하는 {\bf 정규 표현식(regular expressions)}으로 불리는 
+매우 강력한 라이브러리를 제공한다.
+정규 표현식을 책의 앞부분에 소개하지 않은 이유는 정규 표현식 라이브러리가 매우 강력하지만, 약간 복잡하고, 구문에 익숙해지는데 시간이 필요하기 때문이다.
 
-Regular expressions are almost their own little programming language for searching and parsing strings.  As a matter of fact, entire books have been written on the topic of regular expressions.  In this chapter, we will only cover the basics of regular expressions.  For more detail on regular expressions, see:
+정규표현식은 문자열을 검색하고 파싱하는데 그 자체가 작은 프로그래밍 언어다.
+사실, 책 전체가 정규 표현식을 주제로 쓰여진 책이 몇권있다.
+이번 장에서는 정규 표현식의 기초만을 다룰 것이다.
+정규 표현식의 좀더 자세한 사항은 다음을 참조하라.
 
 \url{http://en.wikipedia.org/wiki/Regular_expression}
 
 \url{http://docs.python.org/library/re.html}
 
-The regular expression library must be imported into your program before you can use it.  The simplest use of the regular expression library is the {\tt search()} function.  The following program demonstrates a trivial use of the search function.
+정규 표현식 라이브러리는 사용하기 전에 프로그램에 가져오기(import)하여야 한다.
+정규 표현식 라이브러리의 가장 간단한 쓰임은  {\tt search()} 검색 함수다. 
+다음 프로그램은 검색 함수의 사소한 사용례를 보여준다.
+
 \index{regex!search}
 
 \beforeverb
@@ -30,15 +40,17 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-We open the file, loop through each line and use the regular expression {\tt search()} to only print out lines that contain the string ``From:''.   This program does not use the real power of regular expressions since we could have just as easily used {\tt line.find()} to accomplish the same result.
+
+파일을 열고, 매 라인을 루프를 반복해서 정규 표현식 {\tt search()} 메쏘드를 호출하여 문자열 ''From''이 포함된 라인만 출력한다.
+상기 프로그램은 정규 표현식의 진정 강력한 기능을 사용하지 않았다. 왜냐하면, {\tt line.find()} 메쏘드를 가지고 동일한 결과를 쉽게 구현할 수 있기 때문이다.
+
 \index{string!find}
 
-The power of the regular expressions comes when we add to special characters to the search string that allow us to more precisely control which lines match the string.  Adding these special characters to our regular expression allow us to do sophisticated matching and extraction while writing very little code.
+정규 표현식의 강력한 기능은 문자열에 해당하는 라인을 좀더 정확하게 제어하기 위해서 검색 문자열에 특수문자를 추가할 때 확인할 수 있다.
+매우 적은 코드를 작성해도 정규 표현식에 특수 문자를 추가하는 것 만으로도 정교한 일치(matching)와 추출이 가능하게 한다.
 
-For example, the caret character is uses in regular 
-expressions to match ``the beginning'' of a line.
-We could change our application to only match 
-lines where ``From:'' was at the beginning of the line as follows:
+예를 들어, 탈자 기호(caret)는 라인의 ''시작''과 일치하는 정규 표현식에 사용된다.
+다음과 같이 ''From:''으로 시작하는 라인만 일치하는 응용프로그램을 변경할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -51,16 +63,21 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-Now we will only match lines that {\em start with} the string ``From:''.  This is still a very simple example that we could have done equivalently with the {\tt startswith()} method from the string library.  But it serves to introduce the notion that regular expressions contain special action characters that give us more control as to what will match the regular expression.
+
+''From:'' 문자열로 {\em 시작}하는 라인만 일치할 수 있다. 여전히 매우 간단한 프로그램으로 문자열 라이브러리에서  {\tt startswith()} 메쏘드로 동일하게 수행할 수 있다.
+하지만, 무엇이 정규 표현식을 매칭하는가에 대해서 좀더 많은 제어를 할수 있게 하는 특수 액션 문자를 담고 있는 정규 표현식의 개념을 소개하기에는 충분하다.
+
 \index{string!startswith}
 
-\section{Character matching in regular expressions}
+\section{정규 표현식의 문자 매칭}
 
-There are a number of other special characters that let us build even more powerful regular expressions.  The most commonly used special character is the period character which matches any character.
+좀더 강력한 정규 표현식을 작성할 수 있는 다른 특수문자 많이 있다.
+가장 자주 사용되는 특수 문자는 임의의 문자를 매칭하는 마침표다.
+
 \index{wild card}
 \index{regex!wild card}
 
-In the following example, the regular expression ``F..m:'' would match any of the strings ``From:'', ``Fxxm:'', ``F12m:'', or ``F!@m:'' since the period characters in the regular expression match any character.
+다음 예제에서 정규 표현식 ``F..m:''은 ``From:'', ``Fxxm:'', ``F12m:'', ``F!@m:' 같은 임의의 문자열을 매칭한다. 왜냐하면 정규 표현식의 마침표 문자가 임의의 문자와 매칭되기 때문이다.
 
 \beforeverb
 \begin{verbatim}
@@ -73,9 +90,11 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-This is particularly powerful when combined with the ability to indicate that a character can be repeated any number of times using the ``*'' or ``+'' characters in your regular expression.   These special characters mean that instead of matching a single character in the search string they match zero-or-more in the case of the asterisk or one-or-more of the characters in the case of the plus sign.
 
-We can further narrow down the lines that we match using a repeated {\bf wild card} character in the following example:
+정규 표현식에 ``*'', ``+' ' 문자를 사용하여 문자가 원하는만큼 반복을 나타내는 기능과 결합되었을 때, 더욱 강력해진다.
+``*'', ``+' ' 특수 문자는 검색 문자열에 하나의 문자만을 매칭하는 대신에 별표 기호인 경우 0 혹은 그 이상의 매칭, 더하기 기호인 경우 1 혹은 그 이상의 문자의 매칭을 의미한다.
+
+다음 예제에서 반복 {\bf 와일드 카드(wild card)} 문자를 사용하여 매칭하는 라인을 좀더 좁힐 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -88,7 +107,9 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-The search string ``\verb"^"From:.+@'' will successfully match lines that start with ``From:'' followed by one or more characters ``.+'' followed by an at-sign.  So this will match the following line:
+
+검색 문자열 ''{\verb"^"}From:.+@'' 은 ``From:'' 으로 시작하고, ''.+'' {\verb"@"} 기호로 되는 하나 혹은 그 이상의 문자들의 라인을 성공적으로 매칭한다.
+그래서 다음 라인은 매칭이 될 것이다.
 
 \beforeverb
 \begin{alltt}
@@ -96,8 +117,7 @@ The search string ``\verb"^"From:.+@'' will successfully match lines that start 
 \end{alltt}
 \afterverb
 
-You can think of the ``.+'' wildcard as expanding to match all the characters between the 
-colon character and the at-sign.  
+콜론(:)과  {\verb"@"} 기호 사이의 모든 문자들을 매칭하도록 확장하는 것으로 ``.+'' 와이드 카드를 간주할 수 있다.
 
 \beforeverb
 \begin{alltt}
@@ -105,7 +125,8 @@ colon character and the at-sign.
 \end{alltt}
 \afterverb
 
-It is good to think of the plus and asterisk characters as ``pushy''.  For example the following string would match the last at-sign in the string as the ``.+'' pushes outwards as shown below:
+더하기와 별표 기호를 ''밀어내기(pushy)'' 문자로 생각하는 것이 좋다. 예를 들어, 다음 문자열은 ''.+'' 특수문자가 다음에 보여주듯이 밖으로 밀어내는 것 처럼 문자령릐 마지막
+{\verb"@"} 기호를 매칭한다.
 
 \beforeverb
 \begin{alltt}
@@ -113,14 +134,16 @@ It is good to think of the plus and asterisk characters as ``pushy''.  For examp
 \end{alltt}
 \afterverb
 
-It is possible to tell an asterisk or plus-sign not to be so ``greedy'' by adding 
-another character.   See the detailed documentation for information on turning off the 
-greedy behavior.
+추가로 다른 특수문자를 추가함으로서 별표나 더하기 기호가 너무 ''탐욕(greedy)''스럽지 않게 할 수 있다.
+와일드 카드 특수문자의 탐욕스러운 기능을 끄는 것에 대해서는 자세한 정보를 참조바란다. 
+
 \index{greedy}
 
-\section{Extracting data using regular expressions}
+\section{정규 표현식 사용 데이터 추출}
 
-If we want to extract data from a string in Python we can use the {\tt findall()} method to extract all of the substrings which match a regular expression.  Let's use the example of wanting to extract anything that looks like an e-mail address from any line regardless of format.  For example, we want to pull the e-mail addresses from each of the following lines:
+파이썬에서 문자열에서 데이터를 추출하려면, {\tt findall()} 메쏘드를 사용해서 정규 표현식과 매칭되는 모든 부속 문자열을 추출할 수 있다.
+형식에 관계없이 임의의 라인에서 전자우편 주소 같은 문자열을 추출하는 예제를 사용하자.
+예를 들어, 다음 각 라인에서 전자우편 주소를 뽑아내고자 한다.
 
 \beforeverb
 \begin{verbatim}
@@ -132,7 +155,10 @@ Author: stephen.marquard@uct.ac.za
 \end{verbatim}
 \afterverb
 %
-We don't want to write code for each of the types of lines, splitting and slicing differently for each line.  This following program uses {\tt findall()} to find the lines with e-mail addresses in them and extract one or more addresses from each of those lines.
+
+각각의 라인에 대해서 다르게 쪼개고, 슬라이싱하면서 라인의 각각의 형식에 맞는 코드를 작성하고는 싶지 않다.
+다음 프로그램은 {\tt findall()} 메쏘드를 사용하여 전자우편 주소가 있는 라인을 찾아내고 하나 혹은 그 이상의 주소를 뽑아낸다.
+
 \index{findall}
 \index{regex!findall}
 
@@ -145,10 +171,11 @@ print lst
 \end{verbatim}
 \afterverb
 %
-The {\tt findall()} method searches the string in the second argument and returns a list of all of the strings that look like e-mail addresses.   We are using a two-character sequence 
-that matches a non-whitespace character ({\textbackslash}S). 
 
-The output of the program would be:
+{\tt findall()} 메쏘드는 두번째 인수 문자열을 찾아서 전자우편 주소처럼 보이는 모든 문자열을 리스트로 반환한다.
+공백이 아닌 문자 ({\textbackslash}S)와 매칭되는 두 문자 스퀀스를 사용한다.
+
+프로그램의 출력은 다음과 같다.
 
 \beforeverb
 \begin{verbatim}
@@ -156,10 +183,13 @@ The output of the program would be:
 \end{verbatim}
 \afterverb
 %
-Translating the regular expression, we are looking for substrings that have at least one non-whitespace character, followed by an at-sign, followed by at least one more non-white space characters.  Also, the ``{\textbackslash}S+'' matches as many non-whitespace characters as possible (this is called {\bf ``greedy''} matching in regular expressions).  
 
-The regular expression would match twice (csev@umich.edu and cwen@iupui.edu) but it would not match the string ``@2PM'' because there are no non-blank characters {\em before} the at-sign.  
-We can use this regular expression in a program to read all the lines in a file and print out anything that looks like an e-mail address as follows:
+정규 표현식을 해석하면, 적어도 하나의 공백이 아닌 문자, {\verb"@"}과 적어도 하나 이상의 공백이 아닌 문자를 가진 부속 문자열을 찾는다.
+또한, ``{\textbackslash}S+'' 특수 문자는 가능한 많이 공백이 아닌 문자를 매칭한다. (정규 표현식에서  {\bf ``탐욕(greedy)''} 매칭이라고 부른다.)
+
+정규 표현식은 두번 매칭(csev@umich.edu, cwen@iupui.edu)하지만, 문자열 ``@2PM''은 매칭을 하지 않는다.
+왜냐하면, {\verb"@"} 기호 {\em 앞}에 공백이 아닌 문자가 하나도 없기 때문이다.
+프로그램의 정규 표현식을 사용해서 파일에 모든 라인을 읽고 다음과 같이 전자우편 주소처럼 보이는 모든 문자열을 출력한다.
 
 \beforeverb
 \begin{verbatim}
@@ -173,9 +203,11 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-We read each line and then extract all the substrings that match our regular expression.  Since {\tt findall()} returns a list, we simple check if the number of elements in our returned list is more than zero to print only lines where we found at least one substring that looks like an e-mail address.
+각 라인을 읽어 들이고, 정규 표현식과 매칭되는 모든 부속 문자열을 추출한다. 
+{\tt findall()} 메쏘드는 리스트를 반환하기 때문에, 전자우편 처럼 보이는 부속 문자열을 적어도 하나 찾아서 출력하기 위해서 
+반환 리스트 요소 숫자가 0 보다 큰가를 만을 간단히 확인한다.
 
-If we run the program on {\tt mbox.txt} we get the following output:
+{\tt mbox.txt} 파일에 프로그램을 실행하면, 다음 출력을 얻는다.
 
 \beforeverb
 \begin{verbatim}
@@ -191,11 +223,14 @@ If we run the program on {\tt mbox.txt} we get the following output:
 \end{verbatim}
 \afterverb
 %
-Some of our E-mail addresses have incorrect characters like ``\verb"<"'' or ``;'' at the beginning or end.   Let's declare that we are only interested in the portion of the string that starts and ends with a letter or a number.
 
-To do this, we use another feature of regular expressions.  Square brackets are used to indicate a set of multiple acceptable characters we are willing to consider matching.  In a sense, the ``{\textbackslash}S'' is asking to match the set of ``non-whitespace characters''.  Now we will be a little more explicit in terms of the characters we will match.
+전자우편 수조 몇몇은 ``\verb"<"'', ``;'' 같은 잘못된 문자가 앞과 뒤에 붙어있다.
+문자나 숫자로 시작하고 끝나는 문자열 부분만 관심있다고 하자.
 
-Here is our new regular expression:
+그러기 위해서, 정규 표현식의 또 다른 기능을 사용한다. 매칭하려는 다중 허용 문자 집합을 표기하기 위해서 꺾쇠 괄호를 사용한다. 
+그런 의미에서 ``{\textbackslash}S''은 공백이 아닌 문자 집합을 매칭하게 한다. 이제 매칭하려는 문자에 관해서 좀더 명확해졌다.
+
+여기 새로운 정규 표현식이 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -203,10 +238,16 @@ Here is our new regular expression:
 \end{verbatim}
 \afterverb
 %
-This is getting a little complicated and you can begin to see why regular expressions are their own little language unto themselves.  Translating this regular expression, we are looking for substrings that start with a {\em single} lowercase letter, upper case letter, or number ``[a-zA-Z0-9]'' followed by zero or more non blank characters ``{\textbackslash}S*'', followed by an at-sign, followed by zero or more non-blank characters ``{\textbackslash}S*'' followed by an upper or lower case letter.  Note that we switched from ``+'' to ``*'' to indicate zero-or-more non-blank characters since ``[a-zA-Z0-9]'' is already one non-blank character.   Remember that the ``*'' or ``+'' applies to the single character immediately to the left of the plus or asterisk.
+
+약간 복잡해졌다. 왜 정규 표현식이 자신만의 언어인가에 대해서 이해할 수 있다. 이 정규 표현식을 해석하면, 
+0 혹은 그 이상의 공백이 아닌 문자(``{\textbackslash}S*'')로 하나의 소문자, 대문자 혹은 숫자(``[a-zA-Z0-9]'')를 가지며, {\verb"@"} 다음에 
+0 혹은 그 이상의 공백이 아닌 문자(``{\textbackslash}S*'')로 하나의 소문자, 대문자 혹은 숫자(``[a-zA-Z0-9]'')로 된 부속 문자열을 찾는다.
+0 혹은 그 이상의 공백이 아닌 문자를 나타내기 위해서 ``+''에서 ``*''으로 바꿨다. 왜냐하면 ``[a-zA-Z0-9]'' 자체가 이미 하나의 공백이 아닌 문자이기 때문이다.
+``*'', ``+''는 단일 문자에 별표, 더하기 기호 왼편에 즉시 적용됨을 기억하세요.
+
 \index{regex!character sets(brackets)}
 
-If we use this expression in our program, our data is much cleaner:
+프로그램에 정규 표현식을 사용하면, 데이터가 훨씬 깔끔해진다.
 
 \beforeverb
 \begin{verbatim}
@@ -235,9 +276,12 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-Notice that on the ``source@collab.sakaiproject.org'' lines, our regular expression eliminated two letters at the end of the string (``\verb">";'').  This is because when we append ``[a-zA-Z]'' to the end of our regular expression, we are demanding that whatever string the regular expression parser finds, it must end with a letter.   So when it sees the ``\verb">"'' after ``sakaiproject.org\verb">";'' it simply stops at the last ``matching'' letter it found (i.e. the ``g'' was the last good match).
 
-Also note that the output of the program is a Python list that has a string as the single element in the list.
+``source@collab.sakaiproject.org'' 라인에서 문자열 끝에 ``\verb">";'' 문자를 정규 표현식으로 제거한 것을 주목하세요.
+정규 표현식 끝에 ``[a-zA-Z]''을 추가하여서 정규 표현식 파서가 찾는 임의의 문자열은 문자로만 끝나야 되기 때문이다.
+그래서, ``sakaiproject.org\verb">";''에서 ``\verb">"''을 봤을 때, ''g''가 마지막 맞는 매칭이 되고, 거기서 마지막 매칭을 마치고 중단한다.
+
+프로그램의 출력은 리스트의 단일 요소를 가진 문자열로 파이썬 리스트이다.
 
 \section{Combining searching and extracting}
 
